--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     // Coil
     implementation 'io.coil-kt:coil:2.4.0'
 
+
+    implementation 'com.google.code.gson:gson:2.8.8'
+
     // Room Dependencies
     implementation 'androidx.room:room-runtime:2.5.2'
     kapt 'androidx.room:room-compiler:2.5.2'
